Added form in footer

--- a/index.html
+++ b/index.html
@@ -542,6 +542,26 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form">
+          <form class="form">
+            <div class="form-filed">
+              <label class="form-name" for="mail">Subscribe</label>
+              <input
+                class="form-mail"
+                type="text"
+                name="mail"
+                id="mail"
+                placeholder="E-mail"
+              />
+            </div>
+            <button class="footer-btn" type="submit">
+              Subscribe
+              <svg class="footer-icon-btn" width="24" height="24">
+                <use href="./images/icon.svg#icon-btn-footer"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <!-- Modal -->
