--- a/portfolio.html
+++ b/portfolio.html
@@ -310,7 +310,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg width="24px" height="24px" class="link-icon">
+                <svg width="24" height="24" class="link-icon">
                   <use href="./images/icon.svg#icon-instagram"></use>
                 </svg>
               </a>
@@ -322,7 +322,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg width="24px" height="24px" class="link-icon">
+                <svg width="24" height="24" class="link-icon">
                   <use href="./images/icon.svg#icon-twitter"></use>
                 </svg>
               </a>
@@ -334,7 +334,7 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg width="24px" height="24px" class="link-icon">
+                <svg width="24" height="24" class="link-icon">
                   <use href="./images/icon.svg#icon-facebook"></use>
                 </svg>
               </a>
@@ -346,12 +346,32 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <svg width="24px" height="24px" class="link-icon">
+                <svg width="24" height="24" class="link-icon">
                   <use href="./images/icon.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
+        </div>
+        <div class="footer-form">
+          <form class="form" name="footer-form">
+            <div class="form-filed">
+              <label class="form-name" for="mail">Subscribe</label>
+              <input
+                class="form-mail"
+                type="email"
+                name="mail"
+                id="mail"
+                placeholder="E-mail"
+              />
+            </div>
+            <button class="footer-btn" type="submit">
+              Subscribe
+              <svg class="footer-icon-btn" width="24" height="24">
+                <use href="./images/icon.svg#icon-btn-footer"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
