Changed form in footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -353,12 +353,13 @@
             </li>
           </ul>
         </div>
-        <div class="footer-form">
-          <form class="form" name="footer-form">
-            <div class="form-filed">
-              <label class="form-name" for="mail">Subscribe</label>
+        <div class="footer-form-wrapper">
+          <p class="footer-subscribe">Subscribe</p>
+          <form class="footer-form" name="footer-form">
+            <div class="footer-form-filed">
+              <label class="visually-hidden" for="mail">E-mail</label>
               <input
-                class="form-mail"
+                class="footer-form-mail"
                 type="email"
                 name="mail"
                 id="mail"
