--- a/index.html
+++ b/index.html
@@ -542,13 +542,14 @@
             </li>
           </ul>
         </div>
-        <div class="footer-form">
-          <form class="form">
-            <div class="form-filed">
-              <label class="form-name" for="mail">Subscribe</label>
+        <div class="footer-form-wrapper">
+          <p class="footer-subscribe">Subscribe</p>
+          <form class="footer-form" name="footer-form">
+            <div class="footer-form-filed">
+              <label class="visually-hidden" for="mail">E-mail</label>
               <input
-                class="form-mail"
-                type="text"
+                class="footer-form-mail"
+                type="email"
                 name="mail"
                 id="mail"
                 placeholder="E-mail"
