--- a/portfolio.html
+++ b/portfolio.html
@@ -356,16 +356,14 @@
         <div class="footer-form-wrapper">
           <p class="footer-subscribe">Subscribe</p>
           <form class="footer-form" name="footer-form">
-            <div class="footer-form-filed">
-              <label class="visually-hidden" for="mail">E-mail</label>
-              <input
-                class="footer-form-mail"
-                type="email"
-                name="mail"
-                id="mail"
-                placeholder="E-mail"
-              />
-            </div>
+            <input
+              class="footer-form-input"
+              type="email"
+              name="user_mail"
+              id="mail"
+              placeholder="  "
+            />
+            <label class="footer-form-name" for="mail">E-mail</label>
             <button class="footer-btn" type="submit">
               Subscribe
               <svg class="footer-icon-btn" width="24" height="24">
