--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-
+    <!-- Fronts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -14,10 +14,12 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <!-- Normalize -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
     />
+    <!-- Styles -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -61,7 +63,7 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button class="hero-button" type="button" data-modal-open>
+          <button class="main-button" type="button" data-modal-open>
             Order Service
           </button>
         </div>
@@ -545,16 +547,14 @@
         <div class="footer-form-wrapper">
           <p class="footer-subscribe">Subscribe</p>
           <form class="footer-form" name="footer-form">
-            <div class="footer-form-filed">
-              <label class="visually-hidden" for="mail">E-mail</label>
-              <input
-                class="footer-form-mail"
-                type="email"
-                name="mail"
-                id="mail"
-                placeholder="E-mail"
-              />
-            </div>
+            <input
+              class="footer-form-input"
+              type="email"
+              name="user_mail"
+              id="mail"
+              placeholder="  "
+            />
+            <label class="footer-form-name" for="mail">E-mail</label>
             <button class="footer-btn" type="submit">
               Subscribe
               <svg class="footer-icon-btn" width="24" height="24">
@@ -573,6 +573,64 @@
             <use href="./images/icon.svg#icon-close"></use>
           </svg>
         </button>
+        <!-- Form -->
+        <stong class="modal-title"
+          >Leave your contacts and we will call you back</stong
+        >
+        <form class="form">
+          <lable class="form-name" for="user_name">Name</lable>
+          <div class="form-wrapper">
+            <input
+              class="form-input"
+              type="text"
+              name="user-name"
+              id="user_name"
+              required
+            />
+            <svg class="form-icon" width="18" height="24">
+              <use href="./images/icon.svg#icon-modal-person"></use>
+            </svg>
+          </div>
+          <lable class="form-name" for="user_phone">Phone</lable>
+          <div class="form-wrapper">
+            <input
+              class="form-input"
+              type="tel"
+              name="user-phone"
+              id="user_phone"
+              required
+            />
+            <svg class="form-icon" width="18" height="24">
+              <use href="./images/icon.svg#icon-modal-phone"></use>
+            </svg>
+          </div>
+          <lable class="form-name" for="user_mail">Email</lable>
+          <div class="form-wrapper">
+            <input
+              class="form-input"
+              type="email"
+              name="user-mail"
+              id="user_mail"
+              required
+            /><svg class="form-icon" width="18" height="24">
+              <use href="./images/icon.svg#icon-modal-email"></use>
+            </svg>
+          </div>
+          <lable class="form-name" for="">Comment</lable>
+          <div>
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+          </div>
+
+          <div class="form-checkbox">
+            <input type="checkbox" id="" />
+          </div>
+          <lable class="checkbox-text" for=""
+            >I accept the terms and conditions of the
+            <a class="checkbox-link" href="">Privacy Policy</a></lable
+          >
+
+          <button class="main-button" type="submit">Send</button>
+        </form>
       </div>
     </div>
     <!-- JS -->
