--- a/index.html
+++ b/index.html
@@ -585,9 +585,11 @@
               type="text"
               name="user-name"
               id="user_name"
+              placeholder=" "
               required
+              minlength="2"
             />
-            <svg class="form-icon" width="18" height="24">
+            <svg class="form-icon" width="18" height="18">
               <use href="./images/icon.svg#icon-modal-person"></use>
             </svg>
           </div>
@@ -598,9 +600,12 @@
               type="tel"
               name="user-phone"
               id="user_phone"
+              placeholder=" "
               required
+              minlength="10"
+              maxlength="12"
             />
-            <svg class="form-icon" width="18" height="24">
+            <svg class="form-icon" width="18" height="18">
               <use href="./images/icon.svg#icon-modal-phone"></use>
             </svg>
           </div>
@@ -611,24 +616,28 @@
               type="email"
               name="user-mail"
               id="user_mail"
+              placeholder=" "
               required
-            /><svg class="form-icon" width="18" height="24">
+              pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
+            /><svg class="form-icon" width="18" height="18">
               <use href="./images/icon.svg#icon-modal-email"></use>
             </svg>
           </div>
-          <lable class="form-name" for="">Comment</lable>
-          <div>
-            <textarea name="" id="" cols="30" rows="10"></textarea>
-          </div>
-
-          <div class="form-checkbox">
-            <input type="checkbox" id="" />
-          </div>
-          <lable class="checkbox-text" for=""
-            >I accept the terms and conditions of the
-            <a class="checkbox-link" href="">Privacy Policy</a></lable
-          >
-
+          <lable class="form-name" for="comment">Comment</lable>
+          <textarea
+            class="form-comment"
+            name="comment"
+            id="comment"
+            rows="5"
+            placeholder="Text input"
+          ></textarea>
+          <lable class="checkbox-text"
+            ><input class="checkbox" type="checkbox" required />
+            <span
+              >I accept the terms and conditions of the
+              <a class="checkbox-link" href="">Privacy Policy</a>
+            </span>
+          </lable>
           <button class="main-button" type="submit">Send</button>
         </form>
       </div>
