--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
           >Leave your contacts and we will call you back</stong
         >
         <form class="form">
-          <lable class="form-name" for="user_name">Name</lable>
+          <label class="form-name" for="user_name">Name</label>
           <div class="form-wrapper">
             <input
               class="form-input"
@@ -593,7 +593,7 @@
               <use href="./images/icon.svg#icon-modal-person"></use>
             </svg>
           </div>
-          <lable class="form-name" for="user_phone">Phone</lable>
+          <label class="form-name" for="user_phone">Phone</label>
           <div class="form-wrapper">
             <input
               class="form-input"
@@ -609,7 +609,7 @@
               <use href="./images/icon.svg#icon-modal-phone"></use>
             </svg>
           </div>
-          <lable class="form-name" for="user_mail">Email</lable>
+          <label class="form-name" for="user_mail">Email</label>
           <div class="form-wrapper">
             <input
               class="form-input"
@@ -623,7 +623,7 @@
               <use href="./images/icon.svg#icon-modal-email"></use>
             </svg>
           </div>
-          <lable class="form-name" for="comment">Comment</lable>
+          <label class="form-name" for="comment">Comment</label>
           <textarea
             class="form-comment"
             name="comment"
@@ -631,13 +631,13 @@
             rows="5"
             placeholder="Text input"
           ></textarea>
-          <lable class="checkbox-text"
+          <label class="checkbox-text"
             ><input class="checkbox" type="checkbox" required />
             <span
               >I accept the terms and conditions of the
               <a class="checkbox-link" href="">Privacy Policy</a>
             </span>
-          </lable>
+          </label>
           <button class="main-button" type="submit">Send</button>
         </form>
       </div>
