--- a/index.html
+++ b/index.html
@@ -574,8 +574,8 @@
           </svg>
         </button>
         <!-- Form -->
-        <stong class="modal-title"
-          >Leave your contacts and we will call you back</stong
+        <strong ong class="modal-title"
+          >Leave your contacts and we will call you back</strong
         >
         <form class="form">
           <label class="form-name" for="user_name">Name</label>
